<resources>
    <string name="app_name">Minesweeper</string>
    <string name="app_name_long">Privacy Friendly Minesweeper</string>
    <string name="app_prefix" translatable="false">Privacy Friendly</string>

    <!-- ###DRAWER###-->
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="action_main">Main</string>
    <string name="action_game">Game</string>
    <string name="action_tutorial">Tutorial</string>
    <string name="action_statistics">Statistics</string>
    <string name="action_play">Play</string>
    <string name="action_end">Game ended</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- ###GAME###-->
    <string name="title_activity_game">Game</string>
    <string name="game_mode_easy">Easy</string>
    <string name="game_mode_medium">Medium</string>
    <string name="game_mode_difficult">Difficult</string>
    <string name="game_mode_user_defined">User-defined</string>
    <string name="game_mode_user_defined_2lines">User-\ndefined</string>
    <string name="game_button_start">New Game</string>
    <string name="game_button_continue">Continue Game</string>
    <string name="game_button_user_defined">Customized game mode</string>
    <string name="too_much_cells_title">Too much fields</string>
    <string name="too_much_cells">There are 20 columns and 25 rows possible at most.</string>
    <string name="screenTooSmall_title">Please note</string>
    <string name="screenTooSmall">With this number of fields the user experience might be limited due to the size of the screen.</string>
    <string name="startGame">Continue</string>
    <string name="cancel">Cancel</string>

    <!--###HELP###-->
    <string name="help">Help</string>
    <string name="help_whatis">What is Privacy Friendly Minesweeper?</string>
    <string name="help_whatis_answer">Privacy Friendly Minesweeper is a minesweeper game that belongs to the group of privacy friendly apps.</string>
    <string name="help_feature_one">Are there different game modes available?</string>
    <string name="help_feature_one_answer">Yes, you can choose between the game modes \'easy\', \'medium\', \'difficult\' and \'user-defined\'.</string>
    <string name="help_feature_two">How can I find mines?</string>
    <string name="help_feature_two_answer">Every field has exactly as much mines under the 8 fields in its surrounding as the number on the field indicates. The number becomes visible when the field is uncovered by clicking on it. Logically combining the numbers on several uncovered fields enables you to identify fields that contain a mine.</string>
    <string name="help_feature_three">What is the use of setting a flag on a field?</string>
    <string name="help_feature_three_answer">Marked fields can not be uncovered by accident. Moreover, it allows for faster uncovering by clicking on already revealed fields with marks next to them.</string>
    <string name="help_feature_three_point_five">Can I click on already uncovered fields?</string>
    <string name="help_feature_three_point_five_answer">If you click on an already uncovered field and the number of flags on the 8 surrounding fields equals the number displayed on the field, all covered surrounding fields are uncovered, since they should not be mines.</string>
    <string name="help_feature_four">What does the toolbar show while playing?</string>
    <string name="help_feature_four_answer">While playing, the toolbar displays the level of difficulty, the difference between marked fields and the number of mines and the time played so far.</string>
    <string name="help_feature_five">Can I mark fields when I think there is a mine?</string>
    <string name="help_feature_five_answer">You can mark fields with a flag if you think that they contain a mine. You need to activate the marking mode to do so. You can remove flags by clicking on a marked field again.</string>
    <string name="help_feature_six">Can I track my performance?</string>
    <string name="help_feature_six_answer">You can track your performance and top times on the statistics page.</string>
    <string name="help_feature_seven">What is the difference between the levels of difficulty?</string>
    <string name="help_feature_seven_answer">The higher the level of difficulty, the higher is the portion of mines on the playing field. Additionally, the number of fields on the playing field increases with the degree of difficulty. \nEasy: 6x10 fields, 7 mines \nMedium: 10x16 fields, 24 mines \nDifficult: 12x19 fields, 46 mines</string>
    <string name="help_feature_eight">What is the user defined game mode?</string>
    <string name="help_feature_eight_answer">In the user defined game mode, you can freely choose the size of the playing field and the degree of difficulty.</string>
    <string name="help_feature_nine">How does the game work?</string>
    <string name="help_feature_nine_answer">Under the fields of the playing field are numbers and mines. The aim of the game is to uncover all fields of the playing field without triggering a mine.</string>
    <string name="help_feature_ten">Can I continue games I started earlier?</string>
    <string name="help_feature_ten_answer">Yes. Games that are left using the Back-Button are saved and can be continued from the saved games menu, accessible over the Button \'Continue Game\' in the main menu. The last ten games are stored.</string>
    <string name="help_feature_eleven">What happens if I uncover a field that contains a mine?</string>
    <string name="help_feature_eleven_answer">If you uncover a field that contains a mine, you lose.</string>
    <string name="help_feature_twelve">I uncovered all non-mines, why have I not won yet?</string>
    <string name="help_feature_twelve_answer">To win the Game you have to uncover all non-mines and mark every field with a mine.</string>
    <string name="help_privacy">What makes the app privacy-friendly?</string>
    <string name="help_privacy_answer">Privacy Friendly Minesweeper does not require any permission. It does not include any tracking mechanisms or advertisement.</string>
    <string name="help_permission">Which permissions does the app require?</string>
    <string name="help_permission_answer">Privacy Friendly Minesweeper does not require any permission.</string>

    <!--###ABOUT###-->
    <string name="about">About</string>
    <string name="version_number">Version v%s</string>
    <string name="about_author">Authors: </string>
    <string name="about_author_names" translatable="false">Max Dreger, Benedikt Schulz</string>
    <string name="about_author_contributors">and contributors</string>
    <string name="about_affiliation">In affiliation with</string>
    <string name="privacy_friendly">This application belongs to the group of Privacy Friendly Apps developed by Karlsruhe Institute of Technology (KIT). Sourcecode licensed under GPLv3. Images copyright KIT and Google Inc.</string>
    <string name="more_info">More information can be found on:</string>
    <string name="github" translatable="false"><a href="https://github.com/SecUSo/privacy-friendly-minesweeper">Github-Repo</a></string>
    <string name="url" translatable="false"><a href="https://www.secuso.org/pfa">SECUSO-Website</a></string>

    <!-- ###SETTINGS### -->
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_example_switch">Example Switch</string>
    <string name="pref_example_switch_summary">Example Switch Summary</string>
    <string name="pref_example_summary">Example Summary</string>

    <!-- ### TUTORIAL DIALOG ### -->
    <string name="slide1_heading">Welcome!</string>
    <string name="slide1_text">There are Mines hidden in some fields. Click on a field to uncover it and reveal the content. The number on a field indicates the number of mines in the eight surrounding fields. But be careful, hitting a mine loses the game!</string>

    <string name="slide2_heading">Mark The Mines</string>
    <string name="slide2_text">Use the button to toggle between marking and revealing fields. Mark all fields where the mines are and uncover the rest to win the game!</string>

    <string name="slide3_heading">More Mines</string>
    <string name="slide3_text">There are different difficulties. The higher the difficulty the bigger the board, but the number and density of mines increases as well!</string>

    <string name="slide4_heading">Track your achievements</string>
    <string name="slide4_text">You can check some statistics about your achievements on the statistics page.</string>

    <string name="okay">Okay</string>
    <string name="viewhelp">View Help</string>
    <string name="main_floating_button">Floating Button</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>

    <!-- ### STATISTICS ### -->
    <string name="playedGames">Played games</string>
    <string name="winrate">Winrate</string>
    <string name="averagePlayedTime">Played time Ø</string>
    <string name="numberOfUncoveredFields">Uncovered fields</string>
    <string name="topTenTimes">Top 10 - Best Times</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="resetAllStatistics">Reset all statistics</string>
    <string name="resetAllStatisticsDialogText">Reset all statistics?</string>
    <string name="resetAllStatisticsDialogYes">Yes</string>
    <string name="resetAllStatisticsDialogNo">No</string>

    <!-- ### PLAY ### -->
    <item type="id" name="height" />
    <item type="id" name="width" />
    <string name="untoggled">Mark mines</string>
    <string name="toggled">Marking…</string>
    <string name="gameSaved">Saved game…</string>

    <!-- ### SAVED GAMES ### -->
    <string name="continueSavedGame">Continue Game</string>
    <string name="progress">Progress</string>

    <!-- ### GAME END ### -->
    <string name="victory">Congratulations!\n
        You found all the mines without triggering one of them.\nAnd all that in just </string>
    <string name="defeat1">Unfortunate…\n
        That mine got you after </string>
    <string name="defeat2">
        \nBetter luck next time!</string>
    <string name="gameMode">Mode</string>
    <string name="newBestTime">New best time!</string>
    <string name="statistics">Go to stats</string>
    <string name="replay">Replay same gamemode</string>
    <string name="ok">OK!</string>

    <!-- ### USER DEFINED GAME MODE ### -->
    <string name="title_dialog_user_defined">Settings</string>
    <string name="nr_of_columns">Columns</string>
    <string name="nr_of_rows">Rows</string>
    <string name="degree_of_difficulty">Difficulty</string>
    <string name="userDefinedInvalid_column">Please provide the number of columns</string>
    <string name="userDefinedInvalid_row">Please provide the number of rows</string>
    <string name="userDefinedInvalid_easy">Invalid parameters - For the easy mode at least 9 fields are necessary</string>
    <string name="userDefinedInvalid_medium">Invalid parameters - For the medium mode at least 7 fields are necessary</string>
    <string name="userDefinedInvalid_difficult">Invalid parameters - For the difficult mode at least 5 fields are necessary</string>

</resources>
