<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/victory_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/bordered_window">

    <TextView
        android:id="@+id/victory_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="3"
        android:text="@string/victory"
        android:textAlignment="center"
        android:textSize="25sp">
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:padding="2dp">

        <Button
            android:id="@+id/victory_statistics"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_highlighted_clicked"
            android:padding="2dp"
            android:text="@string/statistics">
        </Button>

        <Button
            android:id="@+id/empty"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="2dp"
            android:background="@color/transparent"
            android:text="">
    </Button>

        <Button
            android:id="@+id/victory_redo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_disabled"
            android:padding="2dp"
            android:text="@string/replay">

        </Button>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:padding="2dp">

        <Button
            android:id="@+id/victory_continue"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_highlighted_2"
            android:padding="10dp"
            android:text="@string/ok">

        </Button>
    </LinearLayout>

</LinearLayout>