<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context="org.secuso.privacyfriendlyminesweeper.activities.GameActivity">

        <include layout="@layout/toolbar"/>

        <LinearLayout
            android:id="@+id/main_content"
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:context="org.secuso.privacyfriendlyminesweeper.activities.GameActivity"
            tools:showIn="@layout/activity_game"
            android:orientation="vertical"
            android:weightSum="10"
            style="?android:buttonBarStyle">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layoutDirection="ltr"
                android:layout_weight="4"
                android:layout_marginBottom="@dimen/activity_vertical_margin">

                <android.support.v4.view.ViewPager
                    android:id="@+id/scroller"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior" />

                <ImageView
                    android:id="@+id/arrow_left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_keyboard_arrow_left_black_24dp"
                    android:layout_alignParentStart="true"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_centerVertical="true"
                    android:onClick="onClick"/>

                <ImageView
                    android:id="@+id/arrow_right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_keyboard_arrow_right_black_24dp"
                    android:layout_alignParentEnd="true"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:layout_centerVertical="true"
                    android:onClick="onClick"/>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="6"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="org.secuso.privacyfriendlyminesweeper.activities.GameActivity"
                android:orientation="vertical"
                android:weightSum="8"
                android:divider="#000"
                android:baselineAligned="false"
                android:gravity="center_horizontal">

                <Button
                    android:id="@+id/game_button_start"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/button_fullwidth"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:textSize="25sp"
                    android:textColor="@color/white"
                    android:text="@string/game_button_start"
                    android:onClick="onClick"/>

                <Button
                    android:id="@+id/game_button_continue"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/button_disabled"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:textSize="25sp"
                    android:textColor="@color/white"
                    android:text="@string/game_button_continue"
                    android:onClick="onClick"/>

                <Button
                    android:id="@+id/space"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/transparent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:textSize="25sp"
                    android:textColor="@color/transparent"/>

                <Button
                    android:id="@+id/game_button_user_defined"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/button_normal"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:textSize="25sp"
                    android:textColor="@color/white"
                    android:text="@string/game_button_user_defined"
                    android:onClick="onClick"/>

            </LinearLayout>

        </LinearLayout>

    </android.support.design.widget.CoordinatorLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/main_drawer" />

</android.support.v4.widget.DrawerLayout>
